# wikipedia_core

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
src/: filename_encoding.rs  filters.rs  generator.rs  lib.rs  parser.rs  types.rs
tests/: lib.rs
